Fix image container border-radius by setting overflow-hidden to parent

--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@
 }
 
 .image-container {
+  overflow: hidden;
   align-self: center;
   max-height: 610px;
   border-radius: 0 4px 4px 0;
